# lpd8-if

./: .gitignore  .gitmodules  CLAUDE.md  build  requirements.txt
firmware/: CMakeLists.txt  config.h  tusb_config.h
firmware/src/: gate_driver.c  gate_driver.h  main.c  mcp4728.c  mcp4728.h  midi_app.c  midi_app.h  midi_handler.c  midi_handler.h  usb_midi_host.c  usb_midi_host.h
